DeveloperOrg/force-app/main/default/objects/Auther__c/Auther__c.object-meta.xml
<CustomObject>
    <label>Auther</label>
    <nameField>
        <label>Auther Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Authers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>