DeveloperOrg/force-app/main/default/objects/Auther__c/fields/book__c.field-meta.xml
<CustomField>
    <fullName>book__c</fullName>
    <label>book</label>
    <referenceTo>book__c</referenceTo>
    <relationshipLabel>Authers</relationshipLabel>
    <relationshipName>Authers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>