DeveloperOrg/force-app/main/default/objects/Auther__c/fields/class__c.field-meta.xml
<CustomField>
    <fullName>class__c</fullName>
    <label>class</label>
    <referenceTo>Person__c</referenceTo>
    <relationshipLabel>Authers</relationshipLabel>
    <relationshipName>Authers</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>