DeveloperOrg/force-app/main/default/objects/Auther__c/recordTypes/auther.recordType-meta.xml
<RecordType>
    <fullName>auther</fullName>
    <active>true</active>
    <label>auther</label>
</RecordType>